fixed minor swagger errors added authentication
